<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xxluciferinxx.mukulbisht.businessapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sweets"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img1"
            android:background=" #f39c12 "
            android:fontFamily="sans-serif-smallcaps"
            android:paddingLeft="8dp"
            android:text="@string/shridi_sweets"
            android:textColor=" #e74c3c "
            android:textSize="32sp"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            tools:targetApi="lollipop" />


        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:background=" #f4d03f "
            android:fontFamily="sans-serif-smallcaps"
            android:paddingLeft="30dp"
            android:text="@string/desc"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            tools:targetApi="jelly_bean" />


        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:background="#f9e79f  "
            android:paddingBottom="16dp"
            android:paddingLeft="40dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/description"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text3"
            android:background=" #f4d03f "
            android:fontFamily="sans-serif-smallcaps"
            android:paddingLeft="30dp"
            android:text="@string/contact_info"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text4"
            android:background="#f9e79f "
            android:paddingLeft="40dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/email"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text5"
            android:background="#f9e79f "
            android:paddingLeft="40dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/phone_no"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text6"
            android:background="#f9e79f "
            android:paddingBottom="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/add"
            android:textSize="17sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/text8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text6"
            android:layout_toEndOf="@+id/text7"
            android:layout_toRightOf="@+id/text7"
            android:background="#f9e79f "
            android:paddingBottom="2dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/address"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/text9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text8"
            android:background=" #f4d03f "
            android:fontFamily="sans-serif-smallcaps"
            android:paddingLeft="30dp"
            android:text="@string/working_hours"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/text10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text9"
            android:background="#f9e79f "
            android:paddingBottom="18dp"
            android:paddingLeft="40dp"
            android:paddingRight="16dp"
            android:paddingTop="20dp"
            android:text="@string/timings"
            android:textSize="16sp"
            tools:ignore=",RtlHardcoded" />
    </RelativeLayout>
</ScrollView>